# ToDo-Bot

./: .gitignore  README.md  pyproject.toml
bot/: handlers.py  main.py  scheduler.py  utils.py
config/: settings.py
db/: database.py  models.py
