[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = ""
authors = ["micode1502"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
twilio = "^9.2.3"
aiosqlite = "^0.20.0"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.5"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
